@@ -1,3 +1,10 @@
+2007-10-23  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (ppc_build_one_stub): Don't duplicate relocs
+	emitted for ".brlt" entries.
+	(toc_adjusting_stub_needed): Don't treat ".fixup" specially here..
+	(ppc64_elf_next_input_section): ..instead do so here.
+
 2007-10-19  Nick Clifton  <nickc@redhat.com>
 
 	* config.bfd: Recognise am34-linux-gnu target.
